--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css reset provided by Columbia bootcamp -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Aimee Darling Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Aimee Darling</h1>
+        <img src="    " alt="photo of aimee" />
+        <nav>
+
+        </nav>
+    </header>
+    <article>
+
+    </article>
+    <section>
+
+
+    </section>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
