added color pallet to stylesheet as variables

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 <body>
     <header>
-        <h1>Aimee Darling</h1>
-        <img src="    " alt="photo of aimee" />
+         <img class="profile" src="./assets/images/untitled.jpg" alt="photo of aimee" />
         <nav>
-
+            <h1>Aimee Darling</h1>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <article>
@@ -24,6 +28,7 @@
 
 
     </section>
+    <
 
     <footer>
         
