added circular profile picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-         <img class="profile" src="./assets/images/untitled.jpg" alt="photo of aimee" />
+         <img class="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee"/>
         <nav>
             <h1>Aimee Darling</h1>
             <ul>
