changed header border

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,44 +9,49 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Aimee Darling Portfolio</title>
 </head>
+
 <body>
-    <header>
+    <header class="main-header">
         <nav>
             <h1>Aimee Darling</h1>
-            <img id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul class="nav">
+                <li class="nav-list">
+                    <a href="#about">About</a></li>
+                <li class="nav-list">
+                    <a href="#projects">Projects</a></li>
+                <li class="nav-list">
+                    <a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <section id="about">
+        <img width=300 id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
         <h2>About</h2>
         <p> paragraphs about me - soft skills, professional background - desire to problem solve</p>
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
+    <section class="projects">
+        <h2 id="projects">Projects</h2>
         <figure class="project-1">
-            <img scr="" alt="" />
+            <a href="https://aimeedarling.github.io/horiseon-code-refactor/"><img width=300 src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
         </figure>
         <figure class="project-2">
-            <img scr="" alt="" />
+            <img width=100 src="./assets/images/IMG_0499.jpg" alt="flowers" />
         </figure>
         <figure class="project-3">
-            <img scr="" alt="" />
+            <img width=100 src="./assets/images/BREV9519.JPG" alt="candle sticks with melted wax" />
         </figure>
 
     </section>
      
-    <aside>
+    <aside id="contact">
         <h2>Contact</h2>
         <ul>
-            <li>E-mail</li>
-            <li>Github</li>
-            <li>linkedin</li>
-                   </ul>
+            <li>Email: <a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
+            <li><a href="https://github.com/aimeedarling">Github</a></li>
+            <li><a href="https://linkedin.com/in/aimeedarlingdev">LinkedIn</a></li>
+        </ul>
     </aside>
 
     <footer>
