--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
 
 <body>
     <header class="main-header">
-        <nav>
-            <h1>Aimee Darling</h1>
-            <ul class="nav">
-                <li class="nav-list">
-                    <a href="#about">About</a></li>
-                <li class="nav-list">
-                    <a href="#projects">Projects</a></li>
-                <li class="nav-list">
-                    <a href="#contact">Contact</a></li>
+        <h1>Aimee Darling</h1>
+        <ul class="nav">
+            <li class="nav-list">
+                 <a href="#about">About</a></li>
+            <li class="nav-list">
+                <a href="#projects">Projects</a></li>
+            <li class="nav-list">
+                <a href="#contact">Contact</a></li>
             </ul>
-        </nav>
-    </header>
+          </header>
 
     <section id="about">
         <img width=300 id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
@@ -31,16 +29,16 @@
         <p> paragraphs about me - soft skills, professional background - desire to problem solve</p>
     </section>
 
-    <section class="projects">
-        <h2 id="projects">Projects</h2>
+    <section>
+        <h2 class="projects">Projects</h2>
         <figure class="project-1">
-            <a href="https://aimeedarling.github.io/horiseon-code-refactor/"><img width=300 src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
+            <a href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
         </figure>
         <figure class="project-2">
-            <img width=100 src="./assets/images/IMG_0499.jpg" alt="flowers" />
+            <img src="./assets/images/IMG_0499.jpg" alt="flowers" />
         </figure>
         <figure class="project-3">
-            <img width=100 src="./assets/images/BREV9519.JPG" alt="candle sticks with melted wax" />
+            <img src="./assets/images/BREV9519.JPG" alt="candle sticks with melted wax" />
         </figure>
 
     </section>
