changed project photos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,34 +16,41 @@
         <h1>Aimee Darling</h1>
         <ul class="nav">
             <li class="nav-list">
-                 <a href="#about">About</a></li>
+                <a href="#about">About</a>
+            </li>
             <li class="nav-list">
-                <a href="#projects">Projects</a></li>
+                <a href="#projects">Projects</a>
+            </li>
             <li class="nav-list">
-                <a href="#contact">Contact</a></li>
-            </ul>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
     </header>
 
-    <section id="about">
+    <section class="about">
         <img width=300 id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
-        <h2>About</h2>
-        <p> paragraphs about me - soft skills, professional background - desire to problem solve</p>
+        <div>
+            <h2>About</h2>
+            <p> paragraphs about me - soft skills, professional background - desire to problem solve</p>
+        </div>
     </section>
 
-    <section>
-        <h2 class="projects">Projects</h2>
+    <section class="projects">
+        <h2>Projects</h2>
         <figure class="project-1">
-            <a href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
+            <a href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg"
+                    alt="image of three people" /></a>
         </figure>
-        <figure class="project-2">
-            <img src="./assets/images/IMG_0499.jpg" alt="flowers" />
-        </figure>
-        <figure class="project-3">
-            <img src="./assets/images/BREV9519.JPG" alt="candle sticks with melted wax" />
-        </figure>
-
+        <div>
+            <figure class="project-2">
+                <img src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg" alt="coffee and flowers" />
+            </figure>
+            <figure class="project-3">
+                <img src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg" alt="close up of flower petals" />
+            </figure>
+        </div>
     </section>
-     
+
     <aside id="contact">
         <h2>Contact</h2>
         <ul>
@@ -53,7 +61,8 @@
     </aside>
 
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
