--- a/index.html
+++ b/index.html
@@ -37,23 +37,21 @@
 
     <section class="projects">
         <h2>Projects</h2>
-        <figure class="project-1">
-            <a href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg"
+        <figure>
+        <a class="project-1" href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg"
                     alt="image of three people" /></a>
         </figure>
-        <div>
-            <figure class="project-2">
-                <img src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg" alt="coffee and flowers" />
-            </figure>
-            <figure class="project-3">
-                <img src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg" alt="close up of flower petals" />
-            </figure>
+        <div class="comingsoon">
+         
+           <img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg" alt="coffee and flowers" />
+          
+            <img class="project-3" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg" alt="close up of flower petals" />
         </div>
     </section>
 
-    <aside id="contact">
+    <aside class="contact">
         <h2>Contact</h2>
-        <ul>
+        <ul class="links">
             <li>Email: <a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
             <li><a href="https://github.com/aimeedarling">Github</a></li>
             <li><a href="https://linkedin.com/in/aimeedarlingdev">LinkedIn</a></li>
