--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <header class="main-header">
         <h1>Aimee Darling</h1>
         <ul class="nav">
-            <li class="nav-list">
+            <li>
                 <a href="#about">About</a>
             </li>
-            <li class="nav-list">
+            <li>
                 <a href="#projects">Projects</a>
             </li>
-            <li class="nav-list">
+            <li>
                 <a href="#contact">Contact</a>
             </li>
         </ul>
     </header>
 
     <section class="about">
-        <img width=300 id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
+        <img id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
         <div>
             <h2>About</h2>
             <p> paragraphs about me - soft skills, professional background - desire to problem solve</p>
@@ -38,12 +38,10 @@
     <section class="projects">
         <h2>Projects</h2>
         <figure>
-        <a class="project-1" href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg"
-                    alt="image of three people" /></a>
+        <a class="project-1" href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
         </figure>
         <div class="comingsoon">
-         
-           <img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg" alt="coffee and flowers" />
+            <img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg" alt="coffee and flowers" />
           
             <img class="project-3" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg" alt="close up of flower petals" />
         </div>
@@ -52,7 +50,7 @@
     <aside class="contact">
         <h2>Contact</h2>
         <ul class="links">
-            <li>Email: <a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
+            <li>Email me at <a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
             <li><a href="https://github.com/aimeedarling">Github</a></li>
             <li><a href="https://linkedin.com/in/aimeedarlingdev">LinkedIn</a></li>
         </ul>
