--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
         </ul>
     </header>
 
-    <section class="about">
+    <section id="about">
         <img id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
         <div>
             <h2>About</h2>
-            <p> paragraphs about me - soft skills, professional background - desire to problem solve</p>
+            <p> After nearly a decade of being a nurse, I am ready to leap into the world of tech. Caring for patients is immensly rewarding, but it's not very creative. I'd like to take the skills in have in communication, expectation setting, and time management, and translate those to developing.</p>
         </div>
     </section>
 
-    <section class="projects">
+    <section id="projects">
         <h2>Projects</h2>
-        <figure>
-        <a class="project-1" href="https://aimeedarling.github.io/horiseon-code-refactor/"><img src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
-        </figure>
+        <a class="project-1" href="https://aimeedarling.github.io/horiseon-code-refactor/"><img
+                src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
         <div class="comingsoon">
-            <img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg" alt="coffee and flowers" />
-          
-            <img class="project-3" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg" alt="close up of flower petals" />
+            <img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg"
+                alt="coffee and flowers" />
+            <img class="project-3" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg"
+                alt="close up of flower petals" />
         </div>
     </section>
 
-    <aside class="contact">
+    <aside id="contact">
         <h2>Contact</h2>
         <ul class="links">
             <li>Email me at <a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
