changed header sizes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <img id="profile" src="./assets/images/Untitledcopy.png" alt="photo of aimee" />
         <div>
             <h2>About</h2>
-            <p> After nearly a decade of being a nurse, I am ready to leap into the world of tech. Caring for patients is immensly rewarding, but it's not very creative. I'd like to take the skills in have in communication, expectation setting, and time management, and translate those to developing.</p>
+            <p> After nearly a decade of being a nurse, I am ready to leap into the world of tech. Caring for patients
+                is immensly rewarding, but it's not very creative. I'd like to take the skills in have in communication,
+                expectation setting, and time management, and translate those to developing.</p>
         </div>
     </section>
 
