changed footer style, consolidated header and footer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <aside id="contact">
         <h2>Contact</h2>
         <ul class="links">
-            <li>Email me at <a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
+            <li>Email:<a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
             <li><a href="https://github.com/aimeedarling">Github</a></li>
             <li><a href="https://linkedin.com/in/aimeedarlingdev">LinkedIn</a></li>
         </ul>
