new responsive stylesheet, crop of project 1 images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css reset provided by Columbia bootcamp -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>Aimee Darling Portfolio</title>
 </head>
 
@@ -40,7 +40,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <a class="project-1" href="https://aimeedarling.github.io/horiseon-code-refactor/"><img
-                src="./assets/images/coderefactor.jpg" alt="image of three people" /></a>
+                src="./assets/images/coderefactor.png" alt="image of three people" /></a>
         <div class="comingsoon">
             <img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg"
                 alt="coffee and flowers" />
@@ -49,17 +49,14 @@
         </div>
     </section>
 
-    <aside id="contact">
+
+    <footer id="contact">
         <h2>Contact</h2>
         <ul class="links">
-            <li>Email:<a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
+            <li><a href="mailto:aimeedarlingdev@gmail.com">aimeedarlingdev@gmail.com</a></li>
             <li><a href="https://github.com/aimeedarling">Github</a></li>
             <li><a href="https://linkedin.com/in/aimeedarlingdev">LinkedIn</a></li>
         </ul>
-    </aside>
-
-    <footer>
-
     </footer>
 </body>
 
