--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div>
             <h2>About</h2>
             <p> After nearly a decade of being a nurse, I am ready to leap into the world of tech. Caring for patients
-                is immensly rewarding, but it's not very creative. I'd like to take the skills in have in communication,
+                is immensely rewarding, but it's not very creative. I'd like to take the skills in have in communication,
                 expectation setting, and time management, and translate those to developing.</p>
         </div>
     </section>
@@ -44,7 +44,7 @@
         <div class="comingsoon">
             <a href="https://aimeedarling.github.io/GBN/"><img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg"
                 alt="coffee and flowers" /></a>
-            <img class="project-3" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg"
+            <img class="project-3" href="https://stark-crag-81936-8a96c55cd3fa.herokuapp.com/" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg"
                 alt="close up of flower petals" />
         </div>
     </section>
