--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <div class="comingsoon">
             <a href="https://aimeedarling.github.io/GBN/"><img class="project-2" src="./assets/images/liana-mikah-4RTAF3Z-0zM-unsplash.jpg"
                 alt="coffee and flowers" /></a>
-            <img class="project-3" href="https://stark-crag-81936-8a96c55cd3fa.herokuapp.com/" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg"
-                alt="close up of flower petals" />
+           <a href="https://stark-crag-81936-8a96c55cd3fa.herokuapp.com/">
+                <img class="project-3" src="./assets/images/kier-in-sight-Tuo1C7bvkv8-unsplash.jpg"
+                alt="close up of flower petals" /></a>
         </div>
     </section>
 
